@@ -12,7 +12,6 @@ dependencies {
     implementation project(':ballerina-tools-api')
     implementation project(':ballerina-runtime')
     implementation 'org.apache.commons:commons-compress:1.18'
-    implementation files(org.gradle.internal.jvm.Jvm.current().toolsJar)
 }
 
 shadowJar {
@@ -43,13 +42,3 @@ description = 'Ballerina - Debug Adapter - Debug Adaptor Core'
 
 ext.moduleName = 'ballerina.debug.adapter.core'
 
-compileJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-        ]
-        classpath = files()
-    }
-}
